@@ -418,6 +418,22 @@ igraph_eigenvector_centrality:
                 INTEGER ncv=3, INT which=0
         NAME-R: evcent
 
+igraph_hub_score:
+        PARAMS: GRAPH graph, OUT VECTOR vector, OUT REALPTR value, \
+                OUT INTEGERPTR retcode, OUT INTEGERPTR vmult, \
+                OUT INTEGERPTR aupdate, \
+                BOOLEAN norm=True, REAL tol=0, INTEGER maxit=300, \
+                INTEGER ncv=3, INT which=0
+        NAME-R: hub.score
+
+igraph_authority_score:
+        PARAMS: GRAPH graph, OUT VECTOR vector, OUT REALPTR value, \
+                OUT INTEGERPTR retcode, OUT INTEGERPTR vmult, \
+                OUT INTEGERPTR aupdate, \
+                BOOLEAN norm=True, REAL tol=0, INTEGER maxit=300, \
+                INTEGER ncv=3, INT which=0
+        NAME-R: authority.score
+
 #######################################
 # Spectral properties
 #######################################
