@@ -905,6 +905,20 @@ int igraph_eigenvector_centrality(const igraph_t *graph, igraph_vector_t *vector
 				  igraph_integer_t maxit, igraph_integer_t pncv,
 				  int which);
 
+int igraph_hub_score(const igraph_t *graph, igraph_vector_t *vector,
+		     igraph_real_t *value, igraph_integer_t *retcode,
+		     igraph_integer_t *vmult, igraph_integer_t *aupdate,
+		     igraph_bool_t norm, igraph_real_t tol, 
+		     igraph_integer_t maxit, igraph_integer_t pncv,
+		     int pwhich);
+
+int igraph_authority_score(const igraph_t *graph, igraph_vector_t *vector,
+			   igraph_real_t *value, igraph_integer_t *retcode,
+			   igraph_integer_t *vmult, igraph_integer_t *aupdate,
+			   igraph_bool_t norm, igraph_real_t tol, 
+			   igraph_integer_t maxit, igraph_integer_t pncv,
+			   int pwhich);
+
 /* -------------------------------------------------- */
 /* Cocitation and other similarity measures           */
 /* -------------------------------------------------- */
